SSL_HTTP_R53-240306/igw.tf
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.vpc.id
 tags = {
  Name = "sjh-igw"
 }
}
